--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <title>高雄旅遊景點</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
+
+
+
 </head>
-<body>
+<body class="bg-warning bg-opacity-25">
   <div id="app" class="mt-2 container p-4">
     <h1 class="text-center mb-4">高雄旅遊景點</h1>
     <div class="row h-100">
@@ -19,8 +22,8 @@
           <label for="search">search</label>
         </div>
         <!-- 左邊列表 -->
-        <div class="list-group option">
-          <label class="list-group-item" v-for="(item,key) in fliterSearch" :key="item.Name">
+        <div class="list-group option custom-radio">
+          <label class="list-group-item list-group-item-action" v-for="(item,key) in fliterSearch" :key="item.Name">
             <input class="form-check-input me-1" type="radio" name="area" @click="selectPlace(item)" :value="item" :checked="cacheArea.Name === item.Name">
   <!-- radio 按鈕透過 checked 來指示以勾選或是不確定狀態，當滿足 cacheArea.Name === item.Name 就會套用 checked 樣式 -->
            {{ item.Name }}
